<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!-- Translatable -->
    <string name="home_menu_search">Search</string>
    <string name="home_menu_shuffle">Shuffle</string>
    <string name="home_menu_settings">Settings</string>
    <string name="home_menu_refresh">Refresh</string>
    <string name="category_songs">Tracks</string>
    <string name="category_albums">Albums</string>
    <string name="category_artists">Artists</string>
    <string name="category_genres">Genres</string>
    <string name="category_playlists">Playlists</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="category_dates">Dates</string>
    <plurals name="songs">
        <item quantity="one">%d Track</item>
        <item quantity="other">%d Tracks</item>
    </plurals>
    <plurals name="albums">
        <item quantity="one">%d Album</item>
        <item quantity="other">%d Albums</item>
    </plurals>
    <plurals name="artists">
        <item quantity="one">%d Artist</item>
        <item quantity="other">%d Artists</item>
    </plurals>
    <plurals name="items">
        <item quantity="one">%d Item</item>
        <item quantity="other">%d Items</item>
    </plurals>
    <string name="follow_system">Follow system</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="sort_by_size">Size</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_artist">Artist</string>
    <string name="sort_by_album">Album</string>
    <string name="categories">Categories</string>
    <string name="operations">Operations</string>
    <string name="dismiss">Dismiss</string>
    <string name="unknown_genre">Unknown genre</string>
    <string name="unknown_year">Unknown year</string>
    <string name="refreshed_songs">Refreshed %1$s tracks</string>
    <string name="search">Search</string>
    <string name="settings_app_name">App name</string>
    <string name="settings_category_info">Info</string>
    <string name="settings_contributors">Contributors</string>
    <string name="play_next">Play next</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="details">Details</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="unknown_playlist">Unknown playlist</string>
    <string name="groovy_crashed">Groovy crashed.</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="album_artist">Album artist</string>
    <string name="unknown_version">Unknown version</string>
    <string name="settings_version">Version</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_artist">Artist</string>
    <string name="settings_category_behavior">Behavior</string>
    <string name="settings_mediastore_filter_summary">Filter songs are shorter than user configured seconds. (Require rescan)</string>
    <string name="settings_mediastore_filter">MediaStore filter</string>
    <string name="settings_repository">Repository</string>
    <string name="dialog_album">Album</string>
    <string name="dialog_genre">Genre</string>
    <string name="dialog_album_artist">Album artist</string>
    <string name="dialog_track_number">Track number</string>
    <string name="dialog_year">Year</string>
    <string name="dialog_path">Path</string>
    <string name="dialog_information">Information</string>
    <string name="unknown_album">Unknown album</string>
    <string name="recently_added">Recently added</string>
    <string name="folders">Folders</string>
    <string name="settings_app_theme">App theme</string>
    <string name="natural_order">Natural order</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="layout">Display</string>
    <string name="home_menu_equalizer">Equalizer</string>
    <string name="equalizer_not_found">Equalizer not found!</string>
    <string name="compact_list">List (compact)</string>
    <string name="check_for_updates">Check our channel for updates!</string>
    <string name="settings_default_progress_bar">Default progress bar</string>
    <string name="settings_default_progress_bar_summary">Enable slider styled progress bar</string>
    <string name="home_menu_about">About</string>
    <string name="opensource_info" translatable="false">Open-sourced under GPL-3.0\nCopyright © 2024 BitMavrick</string>
    <string name="playlist_favourite">Favourite</string>
    <!-- Not translatable -->
    <string name="app_name" translatable="false">Groovy</string>
    <string name="app_name_full" translatable="false">Groovy Music</string>
    <string name="default_time" translatable="false">0:00</string>
    <string name="settings_contributors_detail" translatable="false">BitMavrick</string>
    <string name="upper_folder" translatable="false">..</string>
    <string name="now_playing">Now playing</string>
    <string name="settings_content_based_color_summary">Enable album art based color scheme generation for bottom sheet</string>
    <string name="settings_content_based_color">Content based colors</string>
    <string name="indicator">Indicator</string>
    <string name="settings_package_type">Package type</string>
    <string name="settings_oled_summary">Enable pure black background</string>
    <string name="settings_oled">AMOLED theme</string>
    <string name="no_lyric_found">No lyric found</string>
    <string name="music_format_not_supported">Music format not supported!</string>
    <string name="dialog_disc_number">Disc number</string>
    <string name="disc">Disc</string>
    <string name="unknown_title">Unknown title</string>
    <string name="filesystem">Filesystem</string>
    <string name="dialog_mime">Mime type</string>
    <string name="dialog_duration">Duration</string>
    <string name="settings_title_center">Centered title</string>
    <string name="settings_title_center_summary">Make full player title centered</string>
    <string name="settings_apperance_application">Application</string>
    <string name="settings_player_ui">Player interface</string>
    <string name="settings_player_ui_summary">Customize player interface</string>
    <string name="settings_appearance_summary">Configure application\'s appearance</string>
    <string name="settings_about_app">About</string>
    <string name="settings_about_groovy">About application</string>
    <string name="settings_behavior_summary">Configure application\'s behavior</string>
    <string name="settings_category_links">Links</string>
    <string name="settings_library">Library</string>
    <string name="settings_library_summary">Manage media library</string>
    <string name="settings_player_options">Audio settings</string>
    <string name="settings_player_options_summary">Manage audio output settings</string>
    <string name="settings_customization">Customization</string>
    <string name="settings_customization_summary">Manage customization options</string>
    <string name="settings_album_round_corner_summary">Enable round corner in full player</string>
    <string name="settings_album_round_corner">Album round corner</string>
    <string name="settings_float_output">Float audio output</string>
    <string name="settings_float_output_summary">Enable 32 bit float output (Require service restart)</string>
    <string name="settings_audio">Audio settings</string>
    <string name="settings_skip_silence">Skip silence</string>
    <string name="settings_skip_silence_summary">Skip silence when playing tracks (Require service restart)</string>
    <string name="settings_hardware_acceleration">Playback speed</string>
    <string name="settings_hardware_acceleration_summary">Enable playback speed hardware acceleration (Require service restart)</string>
    <string name="settings_title_bold">Bold title</string>
    <string name="settings_title_bold_summary">Make full player title bold</string>
    <string name="settings_experimental">Experimental</string>
    <string name="settings_experimental_settings">Experimental settings</string>
    <string name="settings_experimental_settings_summary">Configure testing features</string>
    <string name="settings_color_accuracy_summary">Make content based color generation more accurate</string>
    <string name="settings_color_accuracy">Color accuracy</string>
    <string name="sort_by_add_date">Add date</string>
    <string name="sort_by_modified_date">Modified date</string>
    <string name="settings_lyric">Lyric</string>
    <string name="settings_lyrics_configuration">Lyrics configuration</string>
    <string name="settings_lyrics_configuration_summary">Configure lyrics appearance</string>
    <string name="settings_lyrics_bold">Bold lyrics</string>
    <string name="settings_lyrics_bold_summary">Make lyrics use a heavier font weight</string>
    <string name="settings_lyrics_center">Center alignment</string>
    <string name="settings_lyrics_center_summary">Make lyrics display by the center</string>
    <string name="settings_play_on_launch">Play on launch</string>
    <string name="settings_play_on_launch_summary">Play music on launch (If there\'s any in the playlist)</string>
    <string name="settings_blacklist">Blacklist</string>
    <string name="settings_blacklist_folder_summary">Filter songs from certain folders. (Require rescan)</string>
    <string name="settings_blacklist_folder">Blacklist folders</string>
    <string name="settings_privacy" translatable="false">Privacy policy</string>
</resources>