<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:icon="@drawable/widgets_art"
        android:key="app_name"
        android:layout="@layout/basic_preference"
        android:summary="@string/app_name"
        android:title="@string/settings_app_name" />
    <Preference
        android:icon="@drawable/ic_conversion_path"
        android:key="app_version"
        android:layout="@layout/basic_preference"
        android:summary="@string/unknown_version"
        android:title="@string/settings_version" />
    <Preference
        android:icon="@drawable/ic_cookie"
        android:key="package_type"
        android:layout="@layout/basic_preference"
        android:summary="@string/unknown_version"
        android:title="@string/settings_package_type" />
    <Preference
        android:icon="@drawable/artist_art"
        android:layout="@layout/basic_preference"
        android:summary="@string/settings_contributors_detail"
        android:title="@string/settings_contributors" />
    <PreferenceCategory
        android:title="@string/settings_category_links"
        app:iconSpaceReserved="false">
        <Preference
            android:icon="@drawable/ic_language"
            android:layout="@layout/basic_preference"
            android:summary="https://github.com/BitMavrick/Groovy"
            android:title="@string/settings_repository">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/BitMavrick/Groovy" />
        </Preference>
        <Preference
            android:icon="@drawable/ic_privacy"
            android:layout="@layout/basic_preference"
            android:summary="https://bitmavrick.github.io/Groovy/privacy.html"
            android:title="@string/settings_privacy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://bitmavrick.github.io/Groovy/privacy.html" />
        </Preference>

    </PreferenceCategory>
    <!-- For extra space below -->
    <Preference
        android:enabled="false"
        android:title="" />
    <Preference
        android:enabled="false"
        android:title="" />
</PreferenceScreen>
